--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ project(RelayServer)
 include_directories(include)
 
 #add .cc file dir
-aux_source_directory(./src/ SRC_LIST)
+aux_source_directory(src SRC_LIST)
 
 #user ${..} ./main.cc to pruduce relay_server
 add_executable(relay_server ${SRC_LIST} ./main.cc)
