the code I read today is terrible, and I need to think how to modify to make the code beautiful

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,6 @@ aux_source_directory(src SRC_LIST)
 #user ${..} ./main.cc to pruduce relay_server
 add_executable(relay_server ${SRC_LIST} ./main.cc)
 
+add_executable(test_client ${SRC_LIST} ./test_client.cc)
+
 
